/**
 * æµ‹è¯•ç”¨æˆ·è®¾ç½®è„šæœ¬
 * åˆ›å»ºå¹¶æ³¨å†Œä¸‰ä¸ªæµ‹è¯•ç”¨æˆ·ï¼ˆè€äººã€åŒ»ç”Ÿã€å®¶å±žï¼‰ï¼Œå¹¶å°†æ•°æ®æŒä¹…åŒ–åˆ°JSONæ–‡ä»¶
 * 
 * è¿è¡Œæ–¹å¼ï¼šnode tests/setup-test-users.js
 * 
 * åŠŸèƒ½ï¼š
 * 1. æ¸…ç†æ•°æ®åº“
 * 2. åˆ›å»ºä¸‰ä¸ªè§’è‰²çš„EOAé’±åŒ…
 * 3. é¢„è®¡ç®—Smart Accountåœ°å€
 * 4. æ³¨å†Œç”¨æˆ·åˆ°æ•°æ®åº“
 * 5. éƒ¨ç½²Smart Accountåˆ°åŒºå—é“¾
 * 6. ç”¨æˆ·ç™»å½•èŽ·å–Token
 * 7. åˆå§‹åŒ–è®¿é—®ç»„
 * 8. ä¿å­˜æ‰€æœ‰æ•°æ®åˆ°test-data.json
 */

const axios = require('axios');
const ethers = require('ethers');
const { Client } = require('pg');
const { saveTestData, testDataExists } = require('./utils/test-data-manager');

// é…ç½®
const BASE_URL = process.env.API_BASE_URL || 'http://localhost:3000';

// æ•°æ®åº“é…ç½®
const DB_CONFIG_USER = {
  user: 'root',
  host: 'localhost',
  database: 'bs_user_service_db',
  password: '123456',
  port: 5400
};

const DB_CONFIG_RELATION = {
  user: 'root',
  host: 'localhost',
  database: 'bs_relationship_db',
  password: '123456',
  port: 5400
};

const DB_CONFIG_MIGRATION = {
  user: 'root',
  host: 'localhost',
  database: 'migration_db',
  password: '123456',
  port: 5400
};

// æµ‹è¯•æ•°æ®ç»“æž„
const testData = {
  elder: { 
    role: 'è€äºº',
    username: 'çŽ‹ç§€è‹±',
    id_card_number: '110101195803151234',
    phone_number: '13810010001',
    email: 'wang.xiuying@example.net',
    eoaAddress: null,
    eoaPrivateKey: null,
    smartAccount: null, 
    salt: null,
    token: null, 
    accessGroups: []
  },
  doctor: { 
    role: 'åŒ»ç”Ÿ',
    username: 'æŽå»ºå›½',
    id_card_number: '310101196207222345',
    phone_number: '13910010002',
    email: 'li.jianguo@clinic.com',
    eoaAddress: null,
    eoaPrivateKey: null,
    smartAccount: null,
    salt: null,
    token: null 
  },
  family: { 
    role: 'å®¶å±ž',
    username: 'å¼ æ•',
    id_card_number: '440111197011013456',
    phone_number: '13711110003',
    email: 'zhang1.min@example.net',
    eoaAddress: null,
    eoaPrivateKey: null,
    smartAccount: null,
    salt: null,
    token: null 
  },
  metadata: {
    createdAt: null,
    apiBaseUrl: BASE_URL
  }
};

// é¢œè‰²è¾“å‡º
const colors = {
  reset: '\x1b[0m', bright: '\x1b[1m', green: '\x1b[32m',
  red: '\x1b[31m', yellow: '\x1b[33m', blue: '\x1b[34m', cyan: '\x1b[36m'
};

function log(message, color = 'reset') {
  console.log(`${colors[color]}${message}${colors.reset}`);
}

function logSuccess(step, message) {
  log(`âœ… [${step}] ${message}`, 'green');
}

function logError(step, message) {
  log(`âŒ [${step}] ${message}`, 'red');
}

function logInfo(message) {
  log(`â„¹ï¸  ${message}`, 'cyan');
}

function logStep(step) {
  log(`\n${'='.repeat(60)}`, 'blue');
  log(`ðŸ“ ${step}`, 'bright');
  log('='.repeat(60), 'blue');
}

function sleep(ms) {
  return new Promise(resolve => setTimeout(resolve, ms));
}

// HTTP è¯·æ±‚å°è£…
async function apiRequest(method, path, data = null, token = null) {
  try {
    const config = {
      method,
      url: `${BASE_URL}${path}`,
      headers: { 'Content-Type': 'application/json' },
      timeout: 30000
    };

    if (token) {
      config.headers['Authorization'] = `Bearer ${token}`;
    }

    if (data) {
      config.data = data;
    }

    console.log(`ðŸ”„ [API Request] ${method} ${config.url}`);
    if (data) {
      console.log(`ðŸ“¤ [Request Data]`, JSON.stringify(data, null, 2));
    }

    const response = await axios(config);
    console.log(`âœ… [API Response] ${response.status} ${method} ${path}`);
    return { success: true, data: response.data };
  } catch (error) {
    console.log(`âŒ [API Error] ${method} ${path}:`, error.message);
    if (error.response) {
      console.log(`ðŸ“¥ [Error Response]`, error.response.data);
    }
    return {
      success: false,
      error: error.response?.data || error.message,
      status: error.response?.status
    };
  }
}

// æ­¥éª¤0: æ¸…ç†æ•°æ®åº“
async function step0_cleanDatabase() {
  logStep('æ­¥éª¤0: æ¸…ç†æ•°æ®åº“æ•°æ®');

  // æ¸…ç† user-service æ•°æ®åº“
  const userClient = new Client(DB_CONFIG_USER);
  try {
    await userClient.connect();
    logInfo('æ­£åœ¨æ¸…ç† user-service æ•°æ®åº“...');
    
    const userResult = await userClient.query('DELETE FROM users');
    logSuccess('users è¡¨', `æ¸…é™¤äº† ${userResult.rowCount} æ¡è®°å½•`);
    
    const userRoleResult = await userClient.query('DELETE FROM user_roles');
    logSuccess('user roles è¡¨', `æ¸…é™¤äº† ${userRoleResult.rowCount} æ¡è®°å½•`);
    await userClient.end();
  } catch (error) {
    logError('user-service æ•°æ®åº“', `æ¸…ç†å¤±è´¥: ${error.message}`);
    try { await userClient.end(); } catch (e) {}
    throw error;
  }

  await sleep(300);

  // æ¸…ç† relation-service æ•°æ®åº“
  const relationClient = new Client(DB_CONFIG_RELATION);
  try {
    await relationClient.connect();
    logInfo('æ­£åœ¨æ¸…ç† relation-service æ•°æ®åº“...');
    
    const relResult = await relationClient.query('DELETE FROM relationships');
    logSuccess('relationships è¡¨', `æ¸…é™¤äº† ${relResult.rowCount} æ¡è®°å½•`);
    
    const invResult = await relationClient.query('DELETE FROM invitations');
    logSuccess('invitations è¡¨', `æ¸…é™¤äº† ${invResult.rowCount} æ¡è®°å½•`);
    
    const groupResult = await relationClient.query('DELETE FROM access_groups');
    logSuccess('access_groups è¡¨', `æ¸…é™¤äº† ${groupResult.rowCount} æ¡è®°å½•`);
    
    await relationClient.end();
  } catch (error) {
    logError('relation-service æ•°æ®åº“', `æ¸…ç†å¤±è´¥: ${error.message}`);
    try { await relationClient.end(); } catch (e) {}
    throw error;
  }

  await sleep(300);

  // æ¸…ç† migration-service æ•°æ®åº“
  const migrationClient = new Client(DB_CONFIG_MIGRATION);
  try {
    await migrationClient.connect();
    logInfo('æ­£åœ¨æ¸…ç† migration-service æ•°æ®åº“...');
    
    const migrationResult = await migrationClient.query('DELETE FROM migration_sessions');
    logSuccess('migration_sessions è¡¨', `æ¸…é™¤äº† ${migrationResult.rowCount} æ¡è®°å½•`);
    
    await migrationClient.end();
  } catch (error) {
    logError('migration-service æ•°æ®åº“', `æ¸…ç†å¤±è´¥: ${error.message}`);
    try { await migrationClient.end(); } catch (e) {}
    logInfo('è¿ç§»æ•°æ®åº“å¯èƒ½æœªåˆå§‹åŒ–ï¼Œè·³è¿‡æ¸…ç†');
  }

  logSuccess('æ•°æ®åº“æ¸…ç†', 'æ‰€æœ‰æµ‹è¯•æ•°æ®å·²æ¸…é™¤');
}

// æ­¥éª¤1: åˆ›å»ºEOAé’±åŒ…ï¼ˆEOAå¯†é’¥å¯¹åŒæ—¶ç”¨äºŽECIESåŠ å¯†ï¼‰
async function step1_createWallets() {
  logStep('æ­¥éª¤1: åˆ›å»ºä¸‰ä¸ªè§’è‰²çš„EOAé’±åŒ…ï¼ˆEOAå…¬é’¥åŒæ—¶ç”¨äºŽECIESåŠ å¯†ï¼‰');

  for (const role of ['elder', 'doctor', 'family']) {
    const wallet = ethers.Wallet.createRandom();
    testData[role].eoaAddress = wallet.address;
    testData[role].eoaPrivateKey = wallet.privateKey;
    
    // âœ… ç›´æŽ¥ä½¿ç”¨ EOA é’±åŒ…çš„åŽ‹ç¼©å…¬é’¥ä½œä¸ºåŠ å¯†å…¬é’¥
    // secp256k1 æ›²çº¿çš„å¯†é’¥å¯¹æ—¢å¯ç”¨äºŽç­¾åä¹Ÿå¯ç”¨äºŽ ECIES åŠ å¯†
    testData[role].encryptionPublicKey = wallet.signingKey.compressedPublicKey;
    testData[role].encryptionPrivateKey = wallet.privateKey; // å’Œ EOA ç§é’¥ç›¸åŒ
    
    logSuccess(testData[role].role, `EOA: ${wallet.address}`);
    logInfo(`   â””â”€ EOA ç§é’¥: ${wallet.privateKey.substring(0, 20)}...`);
    logInfo(`   â””â”€ åŠ å¯†å…¬é’¥: ${testData[role].encryptionPublicKey.substring(0, 30)}...`);
  }
}

// æ­¥éª¤2: é¢„è®¡ç®—Smart Accountåœ°å€
async function step2_calculateSmartAccountAddresses() {
  logStep('æ­¥éª¤2: é¢„è®¡ç®—Smart Accountåœ°å€');

  for (const role of ['elder', 'doctor', 'family']) {
    const user = testData[role];
    const salt = Math.floor(Math.random() * 1000000);
    
    logInfo(`æ­£åœ¨ä¸º${user.role}è®¡ç®—Smart Accountåœ°å€...`);
    logInfo(`ä½¿ç”¨ salt å€¼: ${salt}`);
    logInfo(`Owner EOA: ${user.eoaAddress}`);

    const result = await apiRequest('POST', '/api/erc4337/account/address', {
      ownerAddress: user.eoaAddress,
      guardians: [],
      threshold: 0,
      salt: salt
    });

    if (result.success) {
      const erc4337Response = result.data;
      
      if (erc4337Response.success && erc4337Response.data && erc4337Response.data.accountAddress) {
        user.smartAccount = erc4337Response.data.accountAddress;
        user.salt = salt;
        logSuccess(user.role, `Smart Accountåœ°å€: ${user.smartAccount}`);
      } else {
        logError(user.role, `å“åº”æ•°æ®ç»“æž„é”™è¯¯: ${JSON.stringify(erc4337Response)}`);
        throw new Error(`è®¡ç®—Smart Accountåœ°å€å¤±è´¥: å“åº”æ•°æ®ç»“æž„é”™è¯¯`);
      }
    } else {
      logError(user.role, `è®¡ç®—å¤±è´¥: ${JSON.stringify(result.error)}`);
      throw new Error(`è®¡ç®—Smart Accountåœ°å€å¤±è´¥: ${role}`);
    }
    await sleep(300);
  }
}

// æ­¥éª¤3: æ³¨å†Œç”¨æˆ·åˆ°æ•°æ®åº“ï¼ˆåŒ…å«åŠ å¯†å…¬é’¥ï¼‰
async function step3_registerUsers() {
  logStep('æ­¥éª¤3: æ³¨å†Œç”¨æˆ·è´¦æˆ·ï¼ˆå†™å…¥æ•°æ®åº“ï¼ŒåŒ…å«åŠ å¯†å…¬é’¥ï¼‰');

  for (const role of ['elder', 'doctor', 'family']) {
    const user = testData[role];
    logInfo(`æ­£åœ¨æ³¨å†Œ${user.role}...`);

    const registerData = {
      eoa_address: user.eoaAddress,
      smart_account_address: user.smartAccount,
      phone_number: user.phone_number,
      id_card_number: user.id_card_number,
      email: user.email,
      encryption_public_key: user.encryptionPublicKey  // âœ… æ·»åŠ åŠ å¯†å…¬é’¥ï¼ˆEOAçš„åŽ‹ç¼©å…¬é’¥ï¼‰
    };

    logInfo(`æ³¨å†Œæ•°æ®: EOA=${registerData.eoa_address?.substring(0, 10)}..., SmartAccount=${registerData.smart_account_address?.substring(0, 10)}...`);
    logInfo(`   â””â”€ åŠ å¯†å…¬é’¥: ${user.encryptionPublicKey?.substring(0, 30)}...`);

    const result = await apiRequest('POST', '/api/auth/register', registerData);

    if (result.success) {
      logSuccess(user.role, 'æ³¨å†ŒæˆåŠŸï¼ˆåŒ…å«åŠ å¯†å…¬é’¥ï¼‰');
      if (result.data && result.data.data) {
        logInfo(`ç”¨æˆ·å: ${result.data.data.username}, è§’è‰²: ${result.data.data.role}`);
        if (result.data.data.encryption_public_key) {
          logInfo(`å·²ä¿å­˜åŠ å¯†å…¬é’¥: ${result.data.data.encryption_public_key.substring(0, 20)}...`);
        }
      }
    } else if (result.status === 409) {
      logInfo(`${user.role}è´¦æˆ·å·²å­˜åœ¨ï¼Œç»§ç»­æµ‹è¯•`);
    } else {
      logError(user.role, `æ³¨å†Œå¤±è´¥: ${JSON.stringify(result.error)}`);
      throw new Error(`æ³¨å†Œå¤±è´¥: ${role}`);
    }
    await sleep(300);
  }
}

// æ­¥éª¤4: éƒ¨ç½²Smart Accountåˆ°åŒºå—é“¾
async function step4_deploySmartAccounts() {
  logStep('æ­¥éª¤4: éƒ¨ç½²Smart Accountåˆ°åŒºå—é“¾');

  for (const role of ['elder', 'doctor', 'family']) {
    const user = testData[role];
    
    logInfo(`æ­£åœ¨ä¸º${user.role}éƒ¨ç½²Smart Account...`);

    const result = await apiRequest('POST', '/api/erc4337/account', {
      ownerAddress: user.eoaAddress,
      guardians: [],
      threshold: 0,
      salt: user.salt
    });

    if (result.success && result.data.success) {
      const accountData = result.data.data;
      logSuccess(user.role, `è´¦æˆ·å·²éƒ¨ç½²: ${accountData.accountAddress}`);
      if (accountData.txHash) {
        logInfo(`éƒ¨ç½²äº¤æ˜“: ${accountData.txHash}`);
      }
    } else {
      logError(user.role, `éƒ¨ç½²å¤±è´¥: ${JSON.stringify(result.error || result.data)}`);
      throw new Error(`éƒ¨ç½²Smart Accountå¤±è´¥: ${role}`);
    }
    await sleep(1500);
  }
}

// æ­¥éª¤5: ç”¨æˆ·ç™»å½•
async function step5_loginUsers() {
  logStep('æ­¥éª¤5: ç”¨æˆ·ç™»å½•èŽ·å–Token');

  for (const role of ['elder', 'doctor', 'family']) {
    const user = testData[role];
    logInfo(`${user.role}æ­£åœ¨ç™»å½•...`);

    const wallet = new ethers.Wallet(user.eoaPrivateKey);
    const loginTime = new Date().toISOString();
    const message = `LOGIN_TIME:${loginTime}`;
    const signature = await wallet.signMessage(message);

    const result = await apiRequest('POST', '/api/auth/login', {
      eoa_address: user.eoaAddress,
      login_time: loginTime,
      signature: signature
    });

    if (result.success) {
      user.token = result.data.data.token;
      logSuccess(user.role, 'ç™»å½•æˆåŠŸ');
      logInfo(`Token: ${user.token.substring(0, 50)}...`);
    } else {
      logError(user.role, `ç™»å½•å¤±è´¥: ${JSON.stringify(result.error)}`);
      throw new Error(`ç™»å½•å¤±è´¥: ${role}`);
    }
    await sleep(300);
  }
}

// æ­¥éª¤6: æŸ¥çœ‹è®¿é—®ç»„ï¼ˆä»…é’ˆå¯¹è€äººï¼‰
async function step6_checkAccessGroups() {
  logStep('æ­¥éª¤6: è€äººæŸ¥çœ‹è®¿é—®ç»„ï¼ˆåº”æœ‰5ä¸ªé¢„è®¾ç¾¤ç»„ï¼‰');

  const result = await apiRequest(
    'GET', 
    `/api/relation/access-groups/stats?user_smart_account=${testData.elder.smartAccount}`, 
    null, 
    testData.elder.token
  );

  if (result.success) {
    testData.elder.accessGroups = result.data.data || result.data || [];
    logSuccess('è€äºº', `æ‹¥æœ‰ ${testData.elder.accessGroups.length} ä¸ªè®¿é—®ç»„`);
    testData.elder.accessGroups.forEach(g => {
      logInfo(`   - ${g.group_name} (ID: ${g.id}, ç±»åž‹: ${g.group_type || 'è‡ªå®šä¹‰'})`);
    });
  } else {
    logError('è€äºº', `èŽ·å–è®¿é—®ç»„å¤±è´¥: ${JSON.stringify(result.error)}`);
    throw new Error('èŽ·å–è®¿é—®ç»„å¤±è´¥');
  }
}

// ä¸»å‡½æ•°ï¼šæ‰§è¡Œæ‰€æœ‰è®¾ç½®æ­¥éª¤
async function setupTestUsers() {
  log('\n' + '='.repeat(70), 'bright');
  log('ðŸš€ å¼€å§‹è®¾ç½®æµ‹è¯•ç”¨æˆ·', 'bright');
  log('='.repeat(70) + '\n', 'bright');

  // æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨æµ‹è¯•æ•°æ®
  if (testDataExists()) {
    log('âš ï¸  æ£€æµ‹åˆ°å·²å­˜åœ¨çš„æµ‹è¯•æ•°æ®æ–‡ä»¶', 'yellow');
    log('å¦‚æžœç»§ç»­ï¼Œå°†æ¸…ç©ºæ•°æ®åº“å¹¶é‡æ–°åˆ›å»ºç”¨æˆ·', 'yellow');
    log('æŒ‰ Ctrl+C å–æ¶ˆï¼Œæˆ–ç­‰å¾… 5 ç§’ç»§ç»­...', 'yellow');
    await sleep(5000);
  }

  const startTime = Date.now();

  try {
    await step0_cleanDatabase();
    await step1_createWallets();
    await step2_calculateSmartAccountAddresses();
    await step3_registerUsers();
    await step4_deploySmartAccounts();
    await step5_loginUsers();
    await step6_checkAccessGroups();

    // æ·»åŠ å…ƒæ•°æ®
    testData.metadata.createdAt = new Date().toISOString();

    // ä¿å­˜æµ‹è¯•æ•°æ®
    logStep('ä¿å­˜æµ‹è¯•æ•°æ®åˆ°æ–‡ä»¶');
    const saved = saveTestData(testData);
    
    if (saved) {
      const duration = ((Date.now() - startTime) / 1000).toFixed(2);

      log('\n' + '='.repeat(70), 'green');
      log('ðŸŽ‰ æµ‹è¯•ç”¨æˆ·è®¾ç½®å®Œæˆï¼', 'green');
      log('='.repeat(70), 'green');
      log(`â±ï¸  æ€»è€—æ—¶: ${duration} ç§’`, 'cyan');
      log('\nðŸ“Š æµ‹è¯•æ•°æ®æ€»ç»“:', 'bright');
      log(`   - åˆ›å»ºè´¦æˆ·æ•°: 3 (è€äººã€åŒ»ç”Ÿã€å®¶å±ž)`, 'cyan');
      log(`   - è€äººè®¿é—®ç»„æ•°: ${testData.elder.accessGroups.length}`, 'cyan');
      log(`   - API Base URL: ${BASE_URL}`, 'cyan');
      log('\nâœ… çŽ°åœ¨å¯ä»¥è¿è¡Œå…¶ä»–æµ‹è¯•è„šæœ¬äº†ï¼\n', 'green');
    } else {
      throw new Error('ä¿å­˜æµ‹è¯•æ•°æ®å¤±è´¥');
    }

  } catch (error) {
    log('\n' + '='.repeat(70), 'red');
    log('âŒ è®¾ç½®å¤±è´¥', 'red');
    log('='.repeat(70), 'red');
    logError('é”™è¯¯', error.message);
    log(`\nå †æ ˆä¿¡æ¯:\n${error.stack}`, 'red');
    process.exit(1);
  }
}

// å¦‚æžœç›´æŽ¥è¿è¡Œæ­¤æ–‡ä»¶ï¼Œåˆ™æ‰§è¡Œè®¾ç½®
if (require.main === module) {
  log('\næ£€æŸ¥çŽ¯å¢ƒ...', 'yellow');
  log(`API Base URL: ${BASE_URL}`, 'cyan');
  log('è¯·ç¡®ä¿ä»¥ä¸‹æœåŠ¡å·²å¯åŠ¨:', 'yellow');
  log('  - PostgreSQL æ•°æ®åº“', 'yellow');
  log('  - Redis', 'yellow');
  log('  - relationship-service (gRPC :50053)', 'yellow');
  log('  - user-service (gRPC :50051)', 'yellow');
  log('  - erc4337-service (HTTP :4337)', 'yellow');
  log('  - api-gateway (HTTP :3000)', 'yellow');
  log('\nå¼€å§‹è®¾ç½®...\n', 'yellow');

  setupTestUsers().catch(err => {
    logError('ä¸»å‡½æ•°', err.message);
    process.exit(1);
  });
}

module.exports = {
  setupTestUsers,
  testData
};

